--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -14,7 +14,7 @@ form.login {
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
-        overflow: hidden;
+        // overflow: hidden;
         z-index: 3;
         a.login_btn-close {
             display: block;
@@ -38,11 +38,11 @@ form.login {
                 text-align: center;
                 line-height: 40px;
                 font-size: 40px;
+                text-shadow: 0px 3px 3px rgba(5, 5, 5, 0.7);
                 &:hover{
                     color: $main-color;
                 }
             }
-            
         }
         .company-sign-in-container,
         .guest-sign-in-container,
@@ -137,7 +137,7 @@ form.login {
             display: block;
         }
         .company-sign-in-container {
-            order: 1;
+            order: 2;
             background-color: $black-color;
             z-index: 3;
             // transform: translateX(0);
@@ -241,7 +241,6 @@ form.login {
             }
         }
         .form-forget-password {
-
             width: 410px;
             height: 508px;
             border: 1px solid $main-color;
@@ -251,7 +250,6 @@ form.login {
             display: none;
             z-index: 2;
             background-color: $black-color;
-            
             .h2-forget{
                 text-align: center;
                 margin-top: 100px;
@@ -262,14 +260,29 @@ form.login {
                 li {
                     margin-bottom: 20px;
                     #changeemail {
+                        @include input();
                         width: 200px;
                         height: 36px;
+                        margin-bottom: 0px;
                     }
                 }
             }
             button.give {
                 margin: 0 auto;
                 margin-top: 30px;
+            }
+            .js-block {
+                display: block;
+            }
+            p{
+                color: $accent-color;
+                font-size: 14px;
+                text-align: center;
+                display: none;
+            }
+            .login_btn_back{
+                margin: 0 auto;
+                margin-top: 20px;
             }
         }
         .js-block {
@@ -408,10 +421,9 @@ form.-login_page_icon {
                 border: 1px solid $main-color;
                 width: 350px;
                 height: 400px;
-                display: none;
+                // display: none;
                 .h2-white,.h2-black {
                     margin-top: 24px;
-                    
                 }
                 .label-before {
                     left: 80px;
@@ -428,6 +440,9 @@ form.-login_page_icon {
                         // transition: 300ms all;
                     }
                 }
+            }
+            .guest-sign-in-container{
+                display: block;
             }
             .company-sign-in-container {
                 width: 350px;
@@ -458,3 +473,13 @@ form.-login_page_icon {
         }
     }
 }
+
+    @media screen and (min-width: $md_bkpoint) {
+        form.login{
+            div.member{
+                .tab-title{
+                    display: none;  
+                }
+            }
+        }
+    }
