--- a/src/sass/page/_live.scss
+++ b/src/sass/page/_live.scss
@@ -7,7 +7,7 @@
     @include flex-box-column(100%);
   }
   // 影片區
-  .live-viedo-container {
+  .live-video-container {
     flex-grow: 1;
     border: 1px solid $main-color;
     font-size: 0;
@@ -31,7 +31,7 @@
         font-size: 18px;
       }
     }
-    .live-viedo {
+    .live-video {
       position: absolute;
       top: 0;
       left: 0;
@@ -75,6 +75,7 @@
           text-align: center;
         }
       }
+      // 顯示留言區塊
       .result-block {
         background-color: $black-color;
         position: relative;
@@ -83,7 +84,15 @@
         width: 100%;
         height: calc(100% - 100px);
         overflow-y: auto;
-
+        touch-action: pan-y;
+        // 右側捲動軸效果變更
+        &::-webkit-scrollbar {
+          height: 3px;
+        }
+        &::-webkit-scrollbar-thumb {
+          box-shadow: inset 0 0 5px grey;
+          border-radius: 5px;
+        }
         .search-container {
           position: relative;
           bottom: 0;
@@ -121,10 +130,6 @@
                 text-align: center;
                 width: 30px;
                 height: 30px;
-              }
-              //姓名
-              .item-name {
-                // @include font(14px, 500, left, 2);
               }
               div.item-block {
                 div.img-block {
@@ -221,10 +226,6 @@
     // width: 100%;
     height: 480px;
     border: 1px solid $main-color;
-    // position: relative;
-    // 關閉時至少要60px
-    // flex-basis: 60px;
-    // flex-shrink: 0;
     transition: all 1s;
     .live-board {
       // position: absolute;
@@ -256,7 +257,8 @@
           text-align: center;
         }
       }
-      .result-block {
+      // 留言顯示區
+      .result-block-rwd {
         background-color: $black-color;
         position: relative;
         top: 0;
@@ -264,8 +266,15 @@
         width: 100%;
         height: calc(100% - 100px);
         // height: 100%;
+        touch-action: pan-y;
         overflow-y: auto;
-
+        &::-webkit-scrollbar {
+          height: 3px;
+        }
+        &::-webkit-scrollbar-thumb {
+          box-shadow: inset 0 0 5px grey;
+          border-radius: 5px;
+        }
         .search-container {
           position: relative;
           bottom: 0;
@@ -305,10 +314,6 @@
                 text-align: center;
                 width: 30px;
                 height: 30px;
-              }
-              //姓名
-              .item-name {
-                // @include font(14px, 500, left, 2);
               }
               //   align-items: center;
               div.item-block {
@@ -450,10 +455,10 @@
     }
   }
   .img-circle {
-    @include absolute(20%, 15%);
+    @include absolute(35%, 15%);
     z-index: -1;
-    width: 300px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     transform: rotate(90deg);
     animation: 1s all;
     // box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px $main-color;
