--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -39,8 +39,9 @@
   // 廠商後台LOGO不同
   .logo-orange {
     width: 50px;
-    height: 50px;
+    height: 40px;
     display: none;
+    object-fit: cover;
     @include mobile(568px) {
       width: 30px;
       height: 30px;
