fix 廠商後臺live頁面 修正sass 報錯

--- a/src/sass/page/_c_back_live.scss
+++ b/src/sass/page/_c_back_live.scss
@@ -177,8 +177,10 @@ aside.companyback_layout.orange{
 
 
             .input{
-                @include input(500px,$accent-color);
-                
+                width: 100px;
+                height: 56px;
+                line-height: 56px;
+                font-size: 18px;
             }
         }
     }
