--- a/src/sass/page/_c_back_live.scss
+++ b/src/sass/page/_c_back_live.scss
@@ -161,6 +161,14 @@ aside.companyback_layout.orange{
         width: 98%;
         .field{
             // margin-left: 50px;
+            
+            // input{
+            //     width: 500px;
+            //     height: 56px;
+            //     line-height: 56px;
+            //     font-size: 18px;
+              
+            // }
 
 
           
@@ -169,18 +177,62 @@ aside.companyback_layout.orange{
    
 
 }
-@include pad(800px){
+@include pad(1052px){
     .companyback_form{
         width: 98%;
         .field{
             // margin-left: 50px;
 
 
-            .input{
-                width: 100px;
+            input{
+                width: 80%;
                 height: 56px;
                 line-height: 56px;
                 font-size: 18px;
+              
+            }
+        }
+    }
+}
+
+@include pad(895px){
+    .companyback_form{
+        width: 98%;
+        .field{
+            // margin-left: 50px;
+
+
+            input{
+                width: 60%;
+                height: 56px;
+                line-height: 56px;
+                font-size: 18px;
+              
+            }
+        }
+    }
+}
+
+@include pad(576px){
+    .companyback_form{
+        width: 100%;
+        .field{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding-top: 0px;
+            margin-left: 30px;
+
+
+            input{
+                width: 80%;
+                height: 56px;
+                line-height: 56px;
+                font-size: 18px;
+               
+              
             }
         }
     }
